update copyright and make airhockey adaptable (still need to fix movbile settings though)

--- a/air-hockey.html
+++ b/air-hockey.html
@@ -5,6 +5,8 @@
     <meta name="description"
         content="Online air hockey \ pin ball game, retro, customizable settings, powered by Unlim8ted Studio Production." />
     <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
+    <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
+
     <style media="screen" type="text/css">
         .loader {
             position: fixed;
@@ -197,10 +199,104 @@
         };
 
     </script>
-    <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
-    <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
+      <link rel="stylesheet" href="styles.css">
+    <!--______________________________START OF NAVBAR____________________________________-->
+  <style>
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    }
 
-    <link rel="stylesheet" href="styles.css">
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    .dropdown-content a {
+      color: black;
+      text-decoration: none;
+      padding: 12px 16px;
+      display: block;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #ddd;
+    }
+
+    .navbar-toggle {
+      display: none;
+      background-color: #333;
+      color: white;
+      padding: 14px 20px;
+      border: none;
+      cursor: pointer;
+      font-size: 18px;
+    }
+    button {
+      padding: 10px;
+      font-size: 1em;
+      background-color: #000000;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: rgb(57, 200, 145);
+    }
+    /* Responsive styles */
+    @media (max-width: 768px) {
+      .nav-links {
+        flex-direction: column;
+        display: none;
+      }
+
+      .nav-links.show {
+        display: flex;
+      }
+
+      .navbar-toggle {
+        display: block;
+      }
+    }
+  </style>
+  
+  <script>
+    function toggleMenu() {
+      const navLinks = document.getElementById("navbarLinks");
+      navLinks.classList.toggle("show");
+    }
+  </script>
+  <nav class="navbar" style="z-index:9999999999999999999;">
+    <div class="navbar-header">
+      <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
+      <ul class="nav-links" id="navbarLinks">
+        <li class="nav-item"><a href="/">Home</a></li>
+        <li class="nav-item"><a href="products">Products</a></li>
+        <li class="nav-item"><a href="help">Help</a></li>
+        <li class="nav-item"><a href="about">About</a></li>
+        <li class="nav-item dropdown">
+          <a href="javascript:void(0)" class="dropbtn">More</a>
+          <div class="dropdown-content">
+            <a href="portfolio">Portfolio</a>
+            <a href="contact">Contact</a>
+            <a href="blog">Blog</a>
+            <a href="live-chat">Live Chat</a>
+            <a href="live-game">Live Chat and Game</a>
+            <a href="puzzle-squares">Puzzle Squares</a>
+          </div>
+        </li>
+        <a href="old"><button>Old site</button></a>
+      </ul>
+    </div>
+  </nav>
+</head>
+    <!--______________________________END OF LOADING AND NOSCRIPT AND NAVBAR____________________________________-->
+
+  
     <style>
         body {
             display: flex;
@@ -279,6 +375,8 @@
             max-width: 80%;
             text-align: left;
             display: block;
+            max-height: 80vh; /* Limits the height to 80% of the viewport height */
+            overflow-y: auto; /* Enables vertical scrolling if the content overflows */
             /* Default display */
         }
 
@@ -325,6 +423,8 @@
             color: white;
             z-index: 1000;
             max-width: 80%;
+            max-height: 80vh; /* Limits the height to 80% of the viewport height */
+            overflow-y: auto; /* Enables vertical scrolling if the content overflows */
             display: none;
         }
 
@@ -388,85 +488,7 @@
             cursor: pointer;
         }
     </style>
-    <style>
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-        }
 
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        .dropdown-content a {
-            color: black;
-            text-decoration: none;
-            padding: 12px 16px;
-            display: block;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-
-        .navbar-toggle {
-            display: none;
-            background-color: #333;
-            color: white;
-            padding: 14px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 18px;
-        }
-
-        /* Responsive styles */
-        @media (max-width: 768px) {
-            .nav-links {
-                flex-direction: column;
-                display: none;
-            }
-
-            .nav-links.show {
-                display: flex;
-            }
-
-            .navbar-toggle {
-                display: block;
-            }
-        }
-    </style>
-    <script>
-        function toggleMenu() {
-            const navLinks = document.getElementById("navbarLinks");
-            navLinks.classList.toggle("show");
-        }
-    </script>
-    <nav class="navbar">
-        <div class="navbar-header">
-            <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
-            <ul class="nav-links" id="navbarLinks">
-                <li class="nav-item"><a href="/">Home</a></li>
-                <li class="nav-item"><a href="products">Products</a></li>
-                <li class="nav-item"><a href="help">Help</a></li>
-                <li class="nav-item"><a href="about">About</a></li>
-                <li class="nav-item dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">More</a>
-                    <div class="dropdown-content">
-                        <a href="portfolio">Portfolio</a>
-                        <a href="contact">Contact</a>
-                        <a href="blog">Blog</a>
-                        <a href="live-chat">Live Chat</a>
-                        <a href="live-game">Live Chat and Game</a>
-                        <a href="puzzle-squares">Puzzle Squares</a>
-                    </div>
-                </li>
-                <a href="old"><button>Old site</button></a>
-            </ul>
-        </div>
-    </nav>
-</head>
 
 <body>
     <div id="scoreBoard"><span class="player-score">Player: 0</span> | <span class="ai-score">AI: 0</span></div>
@@ -487,6 +509,13 @@
             <li>Special move: You can hit the puck backwards!</li>
             <li>Pockets and paddles change size during play</li>
             <u style="font-size: large;"><b>AND YOU CAN EVEN CUSTOMIZE EVERYTHING IN THE SETTINGS (TOP RIGHT)</u></b>
+            <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
         </ul>
         <button onclick="hideInstructions()">Got it!</button>
     </div>
@@ -699,7 +728,7 @@
             const settingsButton = document.querySelector('.settings-button');
             if (settingsButton) {
                 settingsButton.addEventListener('click', toggleSettings);
-                settingsButton.addEventListener('touchend', function (e) {
+                settingsButton.addEventListener('touch', function (e) {
                     e.preventDefault();
                     toggleSettings();
                 });
