--- a/old.html
+++ b/old.html
@@ -1490,7 +1490,13 @@
 
 
             <div style="margin-top: 20px;">
-              <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+              <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
               <p>
                 <a href="/tos">Terms of Service</a> |
                 <a href="/privacy">Privacy Policy</a>
@@ -1791,7 +1797,13 @@
     </div>
     <!-- Copyright -->
     <div style="margin-top: 20px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
   </div>
@@ -1827,7 +1839,13 @@
     </div>
     <!-- Copyright -->
     <div style="margin-top: 20px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
   </div>
@@ -1861,7 +1879,13 @@
     </div>
     <!-- Copyright -->
     <div style="margin-top: 20px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
   </div>
@@ -1895,7 +1919,13 @@
     </div>
     <!-- Copyright -->
     <div style="margin-top: 20px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
   </div>
@@ -1943,7 +1973,13 @@
     </div>
     <!-- Copyright -->
     <div style="margin-top: 20px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
   </div>
@@ -2005,7 +2041,13 @@
     </div>
     <!-- Copyright -->
     <div style="margin-top: 20px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
   </div>
@@ -2112,7 +2154,13 @@
     </div>
     <!-- Copyright -->
     <div style="margin-top: 20px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
   </div>
@@ -2166,7 +2214,13 @@
     </div>
     <!-- Copyright -->
     <div style="margin-top: 20px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
   </div>
@@ -2186,7 +2240,13 @@
     </form>
     <!-- Copyright -->
     <div style="margin-top: 100px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
 
@@ -2200,7 +2260,13 @@
     <a class="button" href="/about-us">Find Out More</a>
     <!-- Copyright -->
     <div style="margin-top: 100px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
 
@@ -2224,7 +2290,13 @@
     </div>
     <!-- Copyright -->
     <div style="margin-top: 100px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
 
@@ -2246,7 +2318,13 @@
 
     <!-- Copyright -->
     <div style="margin-top: 100px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
 
@@ -2282,7 +2360,13 @@
 
     <!-- Copyright -->
     <div style="margin-top: 20px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     </div>
   </div>
 
