--- a/podcasts/ad.html
+++ b/podcasts/ad.html
@@ -173,7 +173,13 @@
     </div>
 </div>
 
-
+<p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+<script>document.addEventListener("DOMContentLoaded", function () {
+    const currentYear = new Date().getFullYear();
+    const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+    document.getElementById("footer-text").innerHTML = footerText;
+});
+</script>
     <!-- Add more products as needed -->
 </div>
 <script>
