--- a/about.html
+++ b/about.html
@@ -621,6 +621,12 @@
     <a class="button" href="/about-us">Find Out More</a>
     <!-- Copyright -->
     <div style="margin-top: 100px;">
-      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+      <script>document.addEventListener("DOMContentLoaded", function () {
+          const currentYear = new Date().getFullYear();
+          const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+          document.getElementById("footer-text").innerHTML = footerText;
+      });
+      </script>
     </div>
   </div>
