--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@
         <a href="/sign-in" style="position:relative;top:-13rem;"><button>Get Started</button></a>
         <!-- Footer -->
         <div class="footer" style="width:110%; bottom:-10rem;position: relative;" id="homefooter">
-          <p>© 2025 Unlim8ted Studio Productions. All rights reserved.</p>
+          <p>© 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
         </div>
 
       </div>
