--- a/music-generator.html
+++ b/music-generator.html
@@ -12,5 +12,12 @@
     <h1>Feature Unavailable</h1>
     <a>Sorry but this page is currently down due to technical difficulties. 😔</a>
     <a href="javascript:history.back()" class="back-button">Take Me Back to Reality</a>
+    <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
 </body>
 </html>
