--- a/products/images.html
+++ b/products/images.html
@@ -582,7 +582,13 @@
   </div>
 
   <footer>
-    <p>© 2025 Unlim8ted Studio Productions. All rights reserved.</p>
+    <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
     <p>
       Visit our <a href="/">homepage</a> or <a href="contact.html">contact us</a>.
     </p>
