--- a/products/music.html
+++ b/products/music.html
@@ -611,7 +611,13 @@
                     View PDF
                 </a>
             </div>
-            <p>© 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+            <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
         </div>
     </div>
 
