--- a/sign-in.html
+++ b/sign-in.html
@@ -431,6 +431,13 @@
           <p>An account is needed to comment, rate products, and add things to your cart, but it is not required.</p>
           <p>If you'd prefer not to create an account, you can visit our <a href="#products">Products</a> or <a
               href="#about">About Us</a> sections.</p>
+              <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
+            <script>document.addEventListener("DOMContentLoaded", function () {
+                const currentYear = new Date().getFullYear();
+                const footerText = `&copy; 2019-${currentYear} Unlim8ted Studio Productions. All rights reserved.`;
+                document.getElementById("footer-text").innerHTML = footerText;
+            });
+            </script>
         </div>
       </form>
     </div>
