--- a/products/music.html
+++ b/products/music.html
@@ -611,6 +611,13 @@
                     View PDF
                 </a>
             </div>
+            <div class="song-item" onclick="playTrack('Emergency Override.mid', 'Emergency Override.mp3')">
+                Emergency Override
+                <br>
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Emergency Override-Score_and_Parts.pdf" target="_blank">
+                    View PDF
+                </a>
+            </div>
             <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
             <script>document.addEventListener("DOMContentLoaded", function () {
                 const currentYear = new Date().getFullYear();
