add more music and update games page locations

--- a/products/music.html
+++ b/products/music.html
@@ -618,6 +618,20 @@
                     View PDF
                 </a>
             </div>
+            <div class="song-item" onclick="playTrack('Restart.mid', 'Restart.mp3')">
+                Restart
+                <br>
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Restart-Score_and_Parts.pdf" target="_blank">
+                    View PDF
+                </a>
+            </div>
+            <div class="song-item" onclick="playTrack('Fast Falling Rain.mid', 'Fast Falling Rain.mp3')">
+                Fast Falling Rain
+                <br>
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Fast Falling Rain-Score_and_Parts.pdf" target="_blank">
+                    View PDF
+                </a>
+            </div>
             <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
             <script>document.addEventListener("DOMContentLoaded", function () {
                 const currentYear = new Date().getFullYear();
