--- a/products/games/index.html
+++ b/products/games/index.html
@@ -578,23 +578,23 @@
                 <img src="https://unlim8ted.com\images\products\games\image.webp" alt="">
                 <h3>The Life of a Meatball Puzzle</h3>
             </a>
-            <a href="/puzzle-squares" class="item-box" data-category="puzzles">
+            <a href="/products/games/puzzle-squares" class="item-box" data-category="puzzles">
                 <img src="https://unlim8ted.com\images\products\games\puzzle-square-preview.png" alt="">
                 <h3>Puzzle Square 1</h3>
             </a>
-            <a href="/puzzle-squares" class="item-box" data-category="puzzles">
+            <a href="/products/games/puzzle-squares" class="item-box" data-category="puzzles">
                 <img src="https://unlim8ted.com\images\products\games\puzzle-square-preview.png" alt="">
                 <h3>Puzzle Square 2</h3>
             </a>
-            <a href="/air-hockey" class="item-box" data-category="online">
+            <a href="/products/games/air-hockey" class="item-box" data-category="online">
                 <img src="https://unlim8ted.com\images\products\games\air-hockey-preview.webp" alt="">
                 <h3>Air Hockey Online</h3>
             </a>
-            <a href="/chess" class="item-box" data-category="online">
+            <a href="/products/games/chess" class="item-box" data-category="online">
                 <img src="https://unlim8ted.com\images\products\games\chess-preview.jpg" alt="">
                 <h3>Chess</h3>
             </a>
-            <a href="product#life" class="item-box" data-category="card games">
+            <a href="/products/product#life" class="item-box" data-category="card games">
                 <img src="https://unlim8ted.com\images\products\games\life cover.jpeg" alt="">
                 <h3>life</h3>
             </a>
