--- a/products/games/index.html
+++ b/products/games/index.html
@@ -573,7 +573,7 @@
             </select>
         </div>
         <div class="item-category" id="music-items">
-            <a href="squareproduct#https://unlim8ted-studio-productions.square.site/product/the-life-of-a-meatball-jigsaw-puzzle/20"
+            <a href="/squareproduct#the-life-of-a-meatball-jigsaw-puzzle/20"
                 class="item-box" data-category="puzzles">
                 <img src="https://unlim8ted.com\images\products\games\image.webp" alt="">
                 <h3>The Life of a Meatball Puzzle</h3>
@@ -594,7 +594,7 @@
                 <img src="https://unlim8ted.com\images\products\games\chess-preview.jpg" alt="">
                 <h3>Chess</h3>
             </a>
-            <a href="/products/product#life" class="item-box" data-category="card games">
+            <a href="/product#life" class="item-box" data-category="card games">
                 <img src="https://unlim8ted.com\images\products\games\life cover.jpeg" alt="">
                 <h3>life</h3>
             </a>
