--- a/index.html
+++ b/index.html
@@ -699,9 +699,9 @@
             <a href="portfolio">Portfolio</a>
             <a href="contact">Contact</a>
             <a href="blog">Blog</a>
-            <a href="live-chat">Live Chat</a>
-            <a href="live-game">Live Chat and Game</a>
-            <a href="puzzle-squares">Puzzle Squares</a>
+            <a href="producsts/games/live-chat">Live Chat</a>
+            <a href="producsts/games/live-game">Live Chat and Game</a>
+            <a href="producsts/games/puzzle-squares">Puzzle Squares</a>
           </div>
         </li>
         <a href="old"><button>Old site</button></a>
