update some pages

--- a/index.html
+++ b/index.html
@@ -938,6 +938,10 @@
       object-fit: cover;
       object-position: 100% center;
     }
+    #image-track>.image:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 20px #00ffcc;
+    }
 
     /* Footer */
     .footer {
