--- a/products/books.html
+++ b/products/books.html
@@ -585,7 +585,7 @@
                 <img src="https://unlim8ted.com/images/products/fiction-book.jpg">
                 <h3>The Glitch (screen play)</h3>
             </a>
-            <a href="products" class="item-box" data-category="sci-fi">
+            <a href="products#alien" class="item-box" data-category="sci-fi">
                 <img src="https://unlim8ted.com/images/products/fiction-book.jpg">
                 <h3>Alien</h3>
             </a>
