--- a/products/games/index.html
+++ b/products/games/index.html
@@ -573,7 +573,7 @@
             </select>
         </div>
         <div class="item-category" id="music-items">
-            <a href="/squareproduct#the-life-of-a-meatball-jigsaw-puzzle/20"
+            <a href="/products/squareproduct#the-life-of-a-meatball-jigsaw-puzzle/20"
                 class="item-box" data-category="puzzles">
                 <img src="https://unlim8ted.com\images\products\games\image.webp" alt="">
                 <h3>The Life of a Meatball Puzzle</h3>
