fix physical items filter name

--- a/products/physical-items.html
+++ b/products/physical-items.html
@@ -566,7 +566,7 @@
             <input type="text" id="physical-items-search" placeholder="Search items...">
             <select id="physical-items-filter">
                 <option value="all">All</option>
-                <option value="t-shirts">Action</option>
+                <option value="t-shirts">T-Shirts</option>
                 <!--add more categories filters and price ranges-->
             </select>
         </div>
