fix produt page logo wrong url

--- a/products/squareproduct.html
+++ b/products/squareproduct.html
@@ -1173,7 +1173,7 @@
   <div id="inner-wrap">
     <div class="logo" style="z-index: 2;">
       <a href="/">
-        <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+        <img src="https://unlim8ted.com/images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
       </a>
     </div>
     <style>
