remove old button from square product page

--- a/products/squareproduct.html
+++ b/products/squareproduct.html
@@ -1250,7 +1250,7 @@
               <a href="/puzzle-squares">Puzzle Squares</a>
             </div>
           </li>
-          <a href="/old"><button>Old site</button></a>
+          <!--<a href="/old"><button>Old site</button></a>-->
         </ul>
       </div>
     </nav>
