fix product json url

--- a/products/product.html
+++ b/products/product.html
@@ -740,7 +740,7 @@
                 async function getProducts() {
                     try {
 
-                        const response = await fetch('./tools/data/products.json');
+                        const response = await fetch('unlim8ted.com/tools/data/products.json');
                         if (!response.ok) {
                             throw new Error(`HTTP error! status: ${response.status}`);
                         }
