update product page and add timecat + update the glitch description

--- a/products/software.html
+++ b/products/software.html
@@ -577,7 +577,11 @@
                     alt="Square Pixels">
                 <h3>Square Pixels</h3>
             </a>
-
+            <a href="product#TimeCat" class="item-box" data-category="entertainment">
+                <img src="https://unlim8ted.com/images/products/software/placeholder.png"
+                    alt="TimeCat">
+                <h3>TimeCat</h3>
+            </a>
             <a href="product#Download-Any-Youtube-Video" class="item-box" data-category="productivity">
                 <img src="https://unlim8ted.com/images/products/download-any-youtube-video.jpg">
                 <h3>Download Any Youtube Video</h3>
